some correction exo 1

--- a/HW1/Homework 1.ipynb
+++ b/HW1/Homework 1.ipynb
@@ -63,7 +63,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -111,9 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "liberia_frame = pd.DataFrame()\n",
@@ -157,9 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#dealing with sierra leone files\n",
@@ -225,9 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#MERGING ALL FRAMES\n",
@@ -235,9 +228,16 @@
     "ebola_deaths_cases.Deaths = ebola_deaths_cases.Deaths.astype(float)\n",
     "ebola_deaths_cases.Cases = ebola_deaths_cases.Cases.astype(float)\n",
     "means = ebola_deaths_cases.groupby(['Date', 'Country'], as_index=False)[['Deaths', 'Cases']].mean()\n",
-    "#the means we were asked to calculate, sort for convenience\n",
-    "print(means.sort_values(by='Country', ascending=0))\n",
     "\n",
+    "means.sort_values(by='Country', ascending=1).set_index(['Country', 'Date']) #the means we were asked to calculate, sort for convenience"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#some figures (for fun!)\n",
     "plt.figure();\n",
     "grouped_means = means.groupby('Country')\n",
@@ -257,9 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ebola_deaths_cases.groupby('Country').plot(x='Date', kind='bar')"
@@ -290,9 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "aggregated_frame = pd.DataFrame() # Creation of the aggregate (as in the exercises)\n",
@@ -318,9 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "metadata = pd.read_excel(DATA_FOLDER + '/microbiome/metadata.xls','Sheet1', index_col=0)\n",
@@ -339,9 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "aggregated_frame = aggregated_frame.T.join(metadata) #Allows us to easily join with metadata\n",
@@ -427,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
