--- a/HW1/Homework 1.ipynb
+++ b/HW1/Homework 1.ipynb
@@ -35,7 +35,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import os #I want to read all files in doc automaticaly\n",
+    "import os #I want to read all files in doc automatically\n",
     "sns.set_context('notebook')"
    ]
   },
@@ -302,7 +302,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -457,13 +457,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Easy to do travel class as we have three integers. We can simply use an histogram\n",
     "plt.title('Travel Class')\n",
-    "titanicXls.pclass.hist(grid=False)\n",
+    "titanicXls.pclass.value_counts().plot(kind='bar')\n",
     "plt.show()\n",
     "\n",
     "#for embarked and sex, we need to have bar charts, as we do not have numerical values.\n",
@@ -494,7 +494,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -503,6 +503,7 @@
     "# Determine the floor for each row\n",
     "cabins['Floor'] = cabins['cabin'].str[:1]\n",
     "#Plot the values.\n",
+    "plt.title('Passengers by Cabin Floor')\n",
     "cabins['Floor'].value_counts().plot.pie(figsize=(10, 10))\n",
     "plt.show()"
    ]
@@ -520,16 +521,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Take only the interesting columns\n",
+    "# Take only the interesting columns.\n",
     "survivalByClass = titanicXls.iloc[:, 0:2]\n",
     "# Clean it from the NaN\n",
     "survivalByClass = pd.DataFrame(survivalByClass.dropna())\n",
     "\n",
-    "#take only the interesting columns: those that have survival = 1\n",
+    "#take only the interesting rows: those that have survival = 1\n",
     "survived = survivalByClass.loc[survivalByClass['survived'] == 1]\n",
     "plt.title('Survived by Class')\n",
     "survived['pclass'].value_counts().plot.pie(figsize=(5, 5), colors=['#ff7f0e', '#2ca02c', '#1f77b4'])\n",
@@ -553,7 +554,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -602,7 +603,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -615,8 +616,15 @@
     "\n",
     "# We have 1046 rows in this DataFrame. Thus, the 523 first rows are the first category. The 523 last are the second.\n",
     "# Lets thus replace the age of everyone by 1 for the first category and 2 for the second.\n",
-    "survivalByAge.loc[:503, 'age'] = 1\n",
-    "survivalByAge.loc[504:, 'age'] = 2"
+    "# As category we will put the mean age of the category.\n",
+    "n = len(survivalByAge)\n",
+    "survivalByAge.loc[:n/2, 'age'] = survivalByAge.loc[:n/2, 'age'].mean()\n",
+    "survivalByAge.loc[(n/2):, 'age'] = survivalByAge.loc[(n/2):, 'age'].mean()\n",
+    "\n",
+    "# This will do the mean for each group/category we want, as we have only 0 or 1.\n",
+    "groupedSurvival = survivalByAge.groupby(['age', 'sex', 'pclass'])['survived'].mean()\n",
+    "survivalByAgeDF = pd.DataFrame(groupedSurvival)\n",
+    "survivalByAgeDF"
    ]
   }
  ],
