--- a/HW1/Homework 1.ipynb
+++ b/HW1/Homework 1.ipynb
@@ -34,7 +34,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import os #I want to read all files in doc automaticaly"
+    "import os #Needed to read all files in doc automatically"
    ]
   },
   {
@@ -56,47 +56,52 @@
    "source": [
     "# Answer Comentary:\n",
     "\n",
-    "As all the csv files are structured in very different ways, I cleaned all data for each country individualy before merging it into one dataframe."
+    "As all the csv files are structured in very different ways, I cleaned all data for each country individualy before merging it into one dataframe. <br/>\n",
+    "**N.B.** : For clarity, we will only comment the code for the 3 data cleaning parts once for steps that are repeated"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "path = DATA_FOLDER + '/ebola/'\n",
     "\n",
-    "#I procede to go though each folder, starting with guinea\n",
+    "#I procede to go through each folder, starting with Guinea\n",
     "\n",
     "guinea_frame = pd.DataFrame()\n",
-    "for filename in os.listdir(path+'guinea_data'):\n",
-    "    frame = pd.read_csv(path+'guinea_data/'+filename, parse_dates=['Date'],\n",
-    "                        usecols=['Date', 'Description', 'Totals'])#keep only the 3 relevant colums\n",
+    "\n",
+    "for filename in os.listdir(path + 'guinea_data'):\n",
+    "    frame = pd.read_csv(path + 'guinea_data/' + filename, parse_dates=['Date'],\n",
+    "                        usecols = ['Date', 'Description', 'Totals']) #Keep only the 3 relevant colums\n",
     "    \n",
+    "    #We are only interested in the New Deaths Registered or New Deaths Registered Today, the other lines are\n",
+    "    #not relevant for our analysis\n",
     "    deaths = frame[['New deaths registered' in d for d in frame.Description]\n",
     "                  ][['Date', 'Totals']].drop_duplicates(subset='Date')\n",
+    "    deaths.columns = ['Date', 'Deaths'] #Renaming for convenience\n",
+    "        \n",
     "    \n",
-    "    cases= frame[['Total new cases' in d for d in frame.Description]][['Date', 'Totals']]\n",
-    "\n",
-    "    deaths.columns = ['Date', 'Deaths']\n",
-    "    cases.columns = ['Date', 'Cases']\n",
+    "    cases = frame[['Total new cases' in d for d in frame.Description]][['Date', 'Totals']]\n",
+    "    cases.columns = ['Date', 'Cases'] #Renaming for convenience\n",
     "    \n",
+    "    #Make sure that we get the same number of values per file (one row per date/csv file)\n",
     "    if(cases.shape != deaths.shape):\n",
-    "        raise AssertionError #make sure that we get the same number of values per file\n",
-    "                            #will be one row per date/csv file\n",
+    "        raise AssertionError \n",
     "    \n",
-    "    total = pd.merge(deaths, cases, on='Date', how='inner')\n",
-    "    total['Date'] = total['Date'].map(lambda x : x.month) #we only want to know about the month (all csv set in 2014)\n",
-    "    guinea_frame = guinea_frame.append(total)\n",
+    "    total = pd.merge(deaths, cases, on='Date', how = 'inner')\n",
+    "    total['Date'] = total['Date'].map(lambda x : x.month) #We only want to know about the month (all csv set in 2014)\n",
+    "    guinea_frame = guinea_frame.append(total) #Aggregate all csv files\n",
     "\n",
     "guinea_frame['Country'] = 'Guinea'\n",
     "\n",
-    "#make sure we get some data from every document & we don't miss rows\n",
+    "#Make sure we get some data from every document & we don't miss rows\n",
     "print('Getting all rows : ',\n",
-    "      guinea_frame.Deaths.shape[0] == len(os.listdir(path+'guinea_data')))\n"
+    "      guinea_frame.Deaths.shape[0] == len(os.listdir(path + 'guinea_data')))\n"
    ]
   },
   {
@@ -110,104 +115,105 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "liberia_frame = pd.DataFrame()\n",
-    "cumulative_cases = pd.DataFrame()\n",
     "\n",
-    "for filename in os.listdir(path+'liberia_data'):\n",
-    "    frame = pd.read_csv(path+'liberia_data/'+filename, parse_dates=['Date'],\n",
-    "                       usecols=['Date', 'Variable', 'National']) #get only the 3 relevant colums\n",
+    "for filename in os.listdir(path + 'liberia_data'):\n",
+    "    frame = pd.read_csv(path + 'liberia_data/' + filename, parse_dates=['Date'],\n",
+    "                       usecols=['Date', 'Variable', 'National']) #Get only the 3 relevant colums\n",
     "    \n",
-    "    #one csv contains duplicates on the variable column\n",
-    "    #As the values differ I assumed that the first value is the correct one\n",
+    "    #There is a csv containing duplicates on the variable columns\n",
+    "    #As the values differ, I assumed that the first value is the correct one\n",
     "    frame = frame.drop_duplicates(subset='Variable') \n",
     "    \n",
     "    deaths = frame[[d in 'Newly reported deaths' for d in frame.Variable]][['Date', 'National']]\n",
     "    deaths.columns = ['Date', 'Deaths']\n",
     "    \n",
-    "    #we get all 3 values of new cases (suspected, probable and confirmed) & sum them up\n",
+    "    #We get all 3 values of new cases (suspected, probable and confirmed) & sum them up\n",
     "    cases_int = frame[['New Case/s'.lower() in d.lower() for d in frame.Variable]][['Date', 'National']]  \n",
-    "    cases_int.columns = ['Date', 'Cases'] #renaming for convenience\n",
-    "    cases = cases_int.groupby('Date', as_index=False)['Cases'].sum()\n",
+    "    cases_int.columns = ['Date', 'Cases']\n",
+    "    cases = cases_int.groupby('Date', as_index = False)['Cases'].sum()\n",
     "    \n",
-    "    #make sure that there is no error in the rows we're getting\n",
     "    if(cases.shape != deaths.shape):\n",
     "        raise AssertionError\n",
     "    \n",
-    "    total = pd.merge(deaths, cases, on='Date', how='inner')  \n",
+    "    total = pd.merge(deaths, cases, on = 'Date', how = 'inner')  \n",
     "    total['Date'] = total['Date'].map(lambda x : x.month)\n",
     "    liberia_frame = liberia_frame.append(total)\n",
     "    \n",
-    "#in december, the total cases & new cases are exchanged, no values for the new cases are provided\n",
-    "#we approximate those values by taking the difference of total values over multiple dates\n",
+    "#In December, the total cases & new cases are exchanged and no values for the new cases are provided\n",
+    "#We approximate those values by taking the difference of total values over multiple dates\n",
     "liberia_frame.loc[(liberia_frame.Cases > 1000 ),'Cases'] =\\\n",
     "    liberia_frame[[d > 1000 for d in liberia_frame.Cases]]['Cases'].diff(periods=1)\n",
     "\n",
     "liberia_frame['Country'] = 'Liberia'    \n",
     "\n",
     "print('Getting all rows : ' , \n",
-    "      liberia_frame.Deaths.shape[0] == len(os.listdir(path+'liberia_data')))    \n"
+    "      liberia_frame.Deaths.shape[0] == len(os.listdir(path + 'liberia_data')))    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The final part of data cleaning is dedicated to the Sierra Leone files"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "#dealing with sierra leone files\n",
-    "\n",
     "sl_frame = pd.DataFrame()\n",
-    "for filename in os.listdir(path+'sl_data'):\n",
-    "    frame = pd.read_csv(path+'sl_data/'+filename, parse_dates=['date'],\n",
+    "\n",
+    "for filename in os.listdir(path + 'sl_data'):\n",
+    "    frame = pd.read_csv(path + 'sl_data/' + filename, parse_dates=['date'],\n",
     "                       usecols=['date', 'variable', 'National'])\n",
-    "    #these csv files do not count the number of new cases\n",
-    "    #we find an approximate value by taking the difference between two consequitive days registered\n",
+    "    \n",
+    "    #These csv files do not count the number of new cases\n",
+    "    #We find an approximate value by taking the difference between two consecutive days registered\n",
     "    deaths = frame[[d in ['death_suspected','death_probable','death_confirmed' ]\n",
     "                    for d in frame.variable]][['date', 'variable', 'National']]\n",
     "\n",
-    "    deaths.National = deaths.National.astype(float) #as to deal well with nan values\n",
-    "    deaths = deaths.groupby('date', as_index=False)['National'].sum() #summing over 3 possible types of death\n",
-    "    \n",
+    "    deaths.National = deaths.National.astype(float) #Needed to deal well with nan values\n",
+    "    deaths = deaths.groupby('date', as_index = False)['National'].sum() #Summing over 3 possible types of death\n",
+    "    deaths.columns = ['Date', 'Total Deaths']\n",
     "    \n",
     "    cases = frame[[d in ['new_suspected','new_probable','new_confirmed' ]\n",
     "                    for d in frame.variable]][['date', 'variable', 'National']]\n",
-    "    \n",
-    "    cases.dropna(axis='rows') #dealing with na values\n",
+    "    cases.dropna(axis='rows') #Dealing with na values\n",
     "    cases.National = cases.National.map(\n",
-    "        lambda x: x if type(x) is float else x.replace(',', '')) #if string contains , remove it\n",
-    "    \n",
-    "    cases.National = cases.National.astype(float) #needed to sum\n",
-    "    cases = cases.groupby('date', as_index=False)['National'].sum()\n",
-    "    \n",
+    "        lambda x: x if type(x) is float else x.replace(',', '')) #If the string contains ','; remove it\n",
+    "    cases.National = cases.National.astype(float) #Needed to sum\n",
+    "    cases = cases.groupby('date', as_index = False)['National'].sum()\n",
     "    cases.columns = ['Date', 'Cases']\n",
-    "    deaths.columns = ['Date', 'Total Deaths']\n",
     "    \n",
     "    if(cases.shape != deaths.shape):\n",
     "        raise AssertionError\n",
     "    \n",
-    "    total = pd.merge(deaths, cases, on='Date', how='inner')  \n",
+    "    total = pd.merge(deaths, cases, on = 'Date', how = 'inner')  \n",
     "    total['Date'] = total['Date'].map(lambda x : x.month)\n",
-    "    \n",
-    "    sl_frame = sl_frame.append(total)#aggregate all csv files\n",
+    "    sl_frame = sl_frame.append(total) \n",
     "\n",
-    "sl_frame.reset_index(drop=True, inplace=True)\n",
-    "\n",
-    "#calculate new deaths by taking difference between consequitive total deaths\n",
+    "sl_frame.reset_index(drop = True, inplace = True)\n",
     "new_deaths = sl_frame['Total Deaths'].diff(periods=1) \n",
+    "sl_frame['Deaths'] = new_deaths #Set the new deaths\n",
+    "del sl_frame['Total Deaths'] #Drop the Total Deaths (not needed for our element)\n",
     "\n",
-    "sl_frame['Deaths'] = new_deaths #set new deaths\n",
-    "del sl_frame['Total Deaths']\n",
-    "\n",
-    "sl_frame.loc[((sl_frame.Deaths < 0)), 'Deaths'] = float('nan') #clearly we can't have negative deaths\n",
-    "sl_frame.loc[((sl_frame.Deaths > 200)), 'Deaths'] = float('nan')#strong outliers (2) in dataset\n",
+    "sl_frame.loc[((sl_frame.Deaths < 0)), 'Deaths'] = float('nan') #Clearly we can't have negative deaths\n",
+    "sl_frame.loc[((sl_frame.Deaths > 200)), 'Deaths'] = float('nan')#We drop the strong outliers (2) in the dataset\n",
     "\n",
     "sl_frame['Country'] = 'Sierra Leone'\n",
     "\n",
     "print('Getting all rows : ' , \n",
-    "    sl_frame.Cases.shape[0] == len(os.listdir(path+'sl_data')))"
+    "    sl_frame.Cases.shape[0] == len(os.listdir(path + 'sl_data')))"
    ]
   },
   {
@@ -220,47 +226,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#MERGING ALL FRAMES\n",
-    "ebola_deaths_cases = pd.concat([guinea_frame, liberia_frame, sl_frame]).reset_index(drop=True)\n",
+    "ebola_deaths_cases = pd.concat([guinea_frame, liberia_frame, sl_frame]).reset_index(drop = True)\n",
     "ebola_deaths_cases.Deaths = ebola_deaths_cases.Deaths.astype(float)\n",
     "ebola_deaths_cases.Cases = ebola_deaths_cases.Cases.astype(float)\n",
-    "means = ebola_deaths_cases.groupby(['Date', 'Country'], as_index=False)[['Deaths', 'Cases']].mean()\n",
+    "means = ebola_deaths_cases.groupby(['Date', 'Country'], as_index = False)[['Deaths', 'Cases']].mean()\n",
     "\n",
-    "means.sort_values(by='Country', ascending=1).set_index(['Country', 'Date']) #the means we were asked to calculate, sort for convenience"
+    "#We are asked to calculate the means, we sort them for convenience\n",
+    "means.sort_values(by='Country', ascending = 1).set_index(['Country', 'Date'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "#some figures (for fun!)\n",
+    "#Some figures (for fun!) used to visualize our data and make sure the results are consistent\n",
     "plt.figure();\n",
     "grouped_means = means.groupby('Country')\n",
-    "grouped_means.get_group('Guinea').plot(x='Date', title='Guinea')\n",
-    "grouped_means.get_group('Liberia').plot(x='Date', title='Liberia')\n",
-    "grouped_means.get_group('Sierra Leone').plot(x='Date', title='Sierra Leone')"
+    "grouped_means.get_group('Guinea').plot(x = 'Date', title = 'Guinea')\n",
+    "grouped_means.get_group('Liberia').plot(x = 'Date', title = 'Liberia')\n",
+    "grouped_means.get_group('Sierra Leone').plot(x = 'Date', title = 'Sierra Leone')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "BONUS answer: \n",
-    "to make sure the 'cleaned' data makes sense (no negative deaths or cases etc.) I used a simple bar graphs to check at one glance"
+    "**BONUS** answer: <br/> \n",
+    "To make sure the 'cleaned' data makes sense (that there are no negative deaths or cases etc.), I used a simple bar graphs to check everything in one glance"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "ebola_deaths_cases.groupby('Country').plot(x='Date', kind='bar')"
+    "ebola_deaths_cases.groupby('Country').plot(x ='Date', kind = 'bar')"
    ]
   },
   {
@@ -288,7 +301,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "aggregated_frame = pd.DataFrame() # Creation of the aggregate (as in the exercises)\n",
@@ -314,7 +329,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "metadata = pd.read_excel(DATA_FOLDER + '/microbiome/metadata.xls','Sheet1', index_col=0)\n",
@@ -333,7 +350,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "aggregated_frame = aggregated_frame.T.join(metadata) #Allows us to easily join with metadata\n",
@@ -419,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
