Adding my review of @othmanbck 's code
Some code didn’t work due to nan’s in the dataset
I don’t understand one of the questions, we should clarify
Changes are marked by ‘leo’

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -32,15 +32,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To find the aproptiate links to find the data, we did a preliminary explosation of the websides responses and code using postman and the google chrome dev tools.\n",
+    "\n",
+    "- For the times, going to the ranking site and looking at the json response immediatly led to the right data.\n",
+    "- For the topuniversities, a search on postman looking for the occurence of the string data was preformed, leading to the source of the data\n",
+    "- To find the additioal information needed in the topuniversities set, we used the google dev tools to quickly check which classes pointed to the < div> tags containing the required information"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We first find the appropriate lists giving us the needed data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Base URL for websites to crawl\n",
@@ -76,9 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Transforming to Data frame\n",
@@ -117,9 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "##NEED TO GET ONLY NUMERICAL VALUES FOR THE RANK DISPLAY!!\n",
@@ -152,9 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "r = requests.get(TOP_UNIVERSITIES + '/universities/university-cambridge')\n",
@@ -191,6 +194,8 @@
    "source": [
     "def get_additional_info(url):\n",
     "    r = requests.get(TOP_UNIVERSITIES + url)\n",
+    "    if r.status_code == 404:\n",
+    "        print('NOOO')\n",
     "    page_body = r.text\n",
     "    soup = BeautifulSoup(page_body, 'html.parser')\n",
     "    \n",
@@ -221,9 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Takes a relatively long time (more than a minute to run)\n",
@@ -238,14 +241,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#In this step, we merge the missing information with the existing frame\n",
-    "merged_top = pd.concat([top_frame, missing_rows], axis=1, join_axes=[top_frame.index])\n",
-    "merged_top.head()"
+    "merged_top = pd.concat([top_frame, missing_rows], axis=1, join_axes=[top_frame.index])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now check if we have any undefined values in the set and see that we do."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_top[merged_top.isnull().any(axis=1)]"
    ]
   },
   {
@@ -259,23 +275,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "top_fac_stud = merged_top\n",
-    "top_fac_stud['faculty/students'] = top_fac_stud.apply(lambda row: int(row['faculty'])/int(row['students']), axis = 1)\n",
-    "top_fac_stud = top_fac_stud[['title', 'faculty/students', 'rank_display']]\n",
-    "top_fac_stud.head()"
+    "##change of code!!!! did not work as data contains non type. changed code:\n",
+    "top_fac_stud['faculty/students'] = top_fac_stud.faculty.astype(float)/top_fac_stud.students.astype(float)\n",
+    "top_fac_stud = top_fac_stud[['title', 'faculty/students', 'rank_display']]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_fac_stud = top_fac_stud.sort_values(['faculty/students', 'rank_display'], ascending=[False, True])\n",
@@ -293,13 +306,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_int_stud = merged_top\n",
-    "top_int_stud['international/students'] = top_int_stud.apply(lambda row: int(row['international students'])/int(row['students']), axis = 1)\n",
+    "top_int_stud['international/students'] =\\\n",
+    "    top_int_stud['international students'].astype(float)/top_int_stud['students'].astype(float)\n",
     "top_int_stud = top_int_stud[['title', 'international/students', 'rank_display']]\n",
     "top_int_stud.head()"
    ]
@@ -307,9 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_int_stud = top_int_stud.sort_values(['international/students', 'rank_display'], ascending=[False, True])\n",
@@ -321,19 +331,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is time to aggregate the universities by country and region in order to sort them."
+    "It is time to aggregate the universities by country and region in order to sort them.\n",
+    "- leo:....I don't think this is what they asked for? \n",
+    "\n",
+    "- leo : I do not understand :\n",
+    "- Answer the previous question aggregating the data by (c) country and (d) region.\n",
+    "- Plot your data using bar charts and describe briefly what you observed."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "##AS RANK DOESN'T WORK (NOT NUMERICAL VALUES ONLY) WE USE THE SCORE\n",
-    "\n",
+    "##AS RANK DOESN'T WORK (NOT NUMERICAL VALUES ONLY ) WE USE THE SCORE\n",
     "top_country = merged_top\n",
     "top_country = top_country.groupby(\"country\", as_index = False)[\"score\"].max()\n",
     "top_country = top_country.sort_values(\"score\", ascending = False)\n",
@@ -344,9 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_region = merged_top\n",
@@ -374,9 +384,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
