--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -87,9 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Transforming to Data frame\n",
@@ -128,9 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "##NEED TO GET ONLY NUMERICAL VALUES FOR THE RANK DISPLAY!!\n",
@@ -163,9 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "r = requests.get(TOP_UNIVERSITIES + '/universities/university-cambridge')\n",
@@ -210,33 +204,41 @@
     "    #In the following steps, we make sure the values exist before fetching them\n",
     "    student_number = (soup.find('div', class_='total student')) \n",
     "    if student_number:\n",
-    "        student_number = student_number.find('div', class_='number').text[1:-1].replace(\",\",\"\")\n",
+    "        student_number = student_number.find('div', class_='number')\n",
     "        \n",
     "    int_student = (soup.find('div', class_='total inter'))\n",
     "    if int_student:\n",
-    "        int_student = int_student.find('div', class_='number').text[1:-1].replace(\",\",\"\")    \n",
+    "        int_student = int_student.find('div', class_='number')\n",
     "    \n",
     "    faculty_number = (soup.find('div', class_='total faculty'))\n",
     "    if faculty_number:\n",
-    "        faculty_number = faculty_number.find('div', class_='number').text[1:-1].replace(\",\",\"\")\n",
+    "        faculty_number = faculty_number.find('div', class_='number')\n",
     "        \n",
     "    int_faculty = (soup.find('div', class_='inter faculty'))\n",
     "    if int_faculty:\n",
-    "        int_faculty = int_faculty.find('div', class_='number').text[1:-1].replace(\",\",\"\")\n",
+    "        int_faculty = int_faculty.find('div', class_='number')\n",
     "    \n",
-    "    frame = pd.DataFrame.from_dict({'students' : [student_number], \n",
-    "              'international students': [int_student], \n",
-    "              'faculty' : [faculty_number], \n",
-    "              'international faculty' : [int_faculty] })\n",
-    "    return frame"
+    "    frame = pd.DataFrame.from_dict({'students' : [remove_blank_convert_float(student_number)], \n",
+    "              'international students': [remove_blank_convert_float(int_student)], \n",
+    "              'faculty' : [remove_blank_convert_float(faculty_number)], \n",
+    "              'international faculty' : [remove_blank_convert_float(int_faculty)] })\n",
+    "    return frame\n",
+    "\n",
+    "\n",
+    "def remove_blank_convert_float(x):\n",
+    "    if(x):\n",
+    "        x = x.text[1:-1].replace(\",\",\"\")\n",
+    "        x_float = float(x)\n",
+    "    else:\n",
+    "        #use nan for unknown values, facilitates computation\n",
+    "        x_float = float('nan')\n",
+    "    return x_float"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Takes a relatively long time (more than a minute to run)\n",
@@ -244,7 +246,6 @@
     "for url in top_frame.url:\n",
     "    new_info = get_additional_info(url)\n",
     "    missing_rows = missing_rows.append(new_info, ignore_index = True)\n",
-    "\n",
     "missing_rows.head()"
    ]
   },
@@ -270,9 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "merged_top[merged_top.isnull().any(axis=1)]"
@@ -289,23 +288,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "top_fac_stud = merged_top\n",
     "##change of code!!!! did not work as data contains non type. changed code:\n",
-    "top_fac_stud['faculty/students'] = top_fac_stud.faculty.astype(float)/top_fac_stud.students.astype(float)\n",
+    "top_fac_stud['faculty/students'] = top_fac_stud.faculty/top_fac_stud.students\n",
     "top_fac_stud = top_fac_stud[['title', 'faculty/students', 'rank_display']]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_fac_stud = top_fac_stud.sort_values(['faculty/students', 'rank_display'], ascending=[False, True])\n",
@@ -323,14 +319,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_int_stud = merged_top\n",
     "top_int_stud['international/students'] =\\\n",
-    "    top_int_stud['international students'].astype(float)/top_int_stud['students'].astype(float)\n",
+    "    top_int_stud['international students']/top_int_stud['students']\n",
     "top_int_stud = top_int_stud[['title', 'international/students', 'rank_display']]\n",
     "top_int_stud.head()"
    ]
@@ -338,9 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_int_stud = top_int_stud.sort_values(['international/students', 'rank_display'], ascending=[False, True])\n",
@@ -352,36 +344,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is time to aggregate the universities by country and region in order to sort them.\n",
-    "- leo:....I don't think this is what they asked for? \n",
-    "\n",
-    "- leo : I do not understand :\n",
-    "- Answer the previous question aggregating the data by (c) country and (d) region.\n",
-    "- Plot your data using bar charts and describe briefly what you observed."
+    "It is time to aggregate the universities by country and region in order to sort them by ranking."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "##AS RANK DOESN'T WORK (NOT NUMERICAL VALUES ONLY ) WE USE THE SCORE\n",
-    "top_country = merged_top\n",
-    "top_country = top_country.groupby(\"country\", as_index = False)[\"score\"].max()\n",
-    "top_country = top_country.sort_values(\"score\", ascending = False)\n",
-    "top_country.index = range(len(top_country.index))\n",
-    "top_country.head()"
+    "top_country = merged_top.sort_values(['country', 'score'], ascending=[True,False])\n",
+    "#top_country = top_country.groupby(\"country\", as_index = False)\n",
+    "top_country.set_index('country')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_region = merged_top\n",
@@ -409,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
