Added Pickle to help with running time

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -18,7 +18,21 @@
     "# Import libraries\n",
     "import requests\n",
     "import pandas as pd\n",
-    "from bs4 import BeautifulSoup"
+    "from os.path import exists\n",
+    "from bs4 import BeautifulSoup\n",
+    "from utils import load_pkl, save_pkl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Use the data folder to look for the saved rankings\n",
+    "DATA_FOLDER = 'Data/'"
    ]
   },
   {
@@ -250,23 +264,17 @@
    "outputs": [],
    "source": [
     "#Takes a relatively long time (more than a minute to run)\n",
-    "missing_rows = pd.DataFrame()\n",
-    "for url in top_frame.url:\n",
-    "    new_info = get_additional_info(url)\n",
-    "    missing_rows = missing_rows.append(new_info, ignore_index = True)\n",
-    "missing_rows.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#In this step, we merge the missing information with the existing frame\n",
-    "merged_top = pd.concat([top_frame, missing_rows], axis=1, join_axes=[top_frame.index])"
+    "\n",
+    "top_file = DATA_FOLDER + 'top_ranking.pkl'\n",
+    "if exists(top_file):\n",
+    "    merged_top = load_pkl(top_file)\n",
+    "else :\n",
+    "    missing_rows = pd.DataFrame()\n",
+    "    for url in top_frame.url:\n",
+    "        new_info = get_additional_info(url)\n",
+    "        missing_rows = missing_rows.append(new_info, ignore_index = True)\n",
+    "    merged_top = pd.concat([top_frame, missing_rows], axis=1, join_axes=[top_frame.index])\n",
+    "    save_pkl(merged_top, top_file)"
    ]
   },
   {
